Fix nav labels on mobile

--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -182,6 +182,17 @@ q-modal {
     display: none;
   }
 }
+/* Fix display of nav labels */
+.quire-navbar-page-controls__item.quire-next-page a,
+.quire-navbar-page-controls__item.quire-previous-page a {
+  white-space: nowrap;
+  max-width: calc((100vw - 18rem) * .5);
+}
+@media screen and (max-width: 900px) {
+  span.nav-label {
+    display: none !important;
+  }
+}
 
 /* Next/Prev Buttons */
 .quire-contents-buttons li.quire-nav-button {
